--- a/app/src/main/res/layout/activity_home2.xml
+++ b/app/src/main/res/layout/activity_home2.xml
@@ -76,7 +76,7 @@
             tools:gravity="center">
 
             <Button
-                android:id="@+id/habitatBtn"
+                android:id="@+id/submitBtn"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
