--- a/app/src/main/res/layout/activity_customize.xml
+++ b/app/src/main/res/layout/activity_customize.xml
@@ -7,19 +7,21 @@
     android:background="#065938"
     tools:context=".Customize">
 
+    <!-- Main Container -->
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
+        android:id="@+id/mainContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
         android:background="@drawable/border"
-        android:foregroundGravity="center|center_horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <!-- Header Container -->
         <LinearLayout
+            android:id="@+id/headerContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
@@ -49,78 +51,127 @@
                 android:textColor="#FFFFFF"
                 android:textSize="30sp" />
         </LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="360dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/light_green_bg"
-        android:foregroundGravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:foregroundGravity="center">
+        <!-- Points Display -->
+        <TextView
+            android:id="@+id/pointsTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/fredokabold"
+            android:text="Points: 100"
+            android:textColor="#FFFFFF"
+            android:textSize="24sp"
+            app:layout_constraintTop_toBottomOf="@+id/headerContainer"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:foregroundGravity="center"
-            android:orientation="vertical"
-            android:padding="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+        <!-- Main content with animal image and accessory options -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/contentContainer"
+            android:layout_width="360dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/light_green_bg"
+            app:layout_constraintTop_toBottomOf="@+id/pointsTextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:gravity="center">
+            app:layout_constraintBottom_toTopOf="@+id/buttonsContainer">
 
-            <TextView
-                android:id="@+id/textView2"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/fredokemedium"
-                android:text="TextView"
-                android:textSize="18sp"
-                tools:textAlignment="center" />
+                android:layout_height="0dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent">
 
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:fontFamily="@font/fredokaregular"
-                android:text="text text text text text text text text text text text text text text text text text text text text text text text text"
-                android:textSize="18sp"
-                tools:textAlignment="center" />
+                <!-- Animal Image -->
+                <ImageView
+                    android:id="@+id/animalImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/elephantjiya"
+                    android:layout_gravity="center" />
+
+                <!-- Accessory Image -->
+                <ImageView
+                    android:id="@+id/accessoryImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/trash"
+                    android:scaleType="fitCenter"
+                    android:adjustViewBounds="true"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/animalImage"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:maxWidth="100dp"
+                    android:maxHeight="100dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginStart="130dp"
+                    android:layout_marginEnd="0dp"
+                    app:layout_constraintHorizontal_bias="0.5" />
+            </FrameLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <!-- Buttons for accessories -->
+        <LinearLayout
+            android:id="@+id/buttonsContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/contentContainer"
+            app:layout_constraintBottom_toTopOf="@+id/footerContainer"
+            android:gravity="center">
 
             <Button
-                android:id="@+id/submitBtn"
-                android:layout_width="160dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:id="@+id/hatButton"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
                 android:backgroundTint="#62C578"
-                android:fontFamily="@font/fredokemedium"
-                android:text="Button" />
+                android:padding="8dp"
+                android:text="Hat (20pts)" />
+
+            <Button
+                android:id="@+id/bowButton"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:backgroundTint="#62C578"
+                android:padding="8dp"
+                android:text="Bow (30pts)"
+                android:layout_marginStart="20dp" />
+
+            <Button
+                android:id="@+id/crownButton"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:backgroundTint="#62C578"
+                android:padding="8dp"
+                android:text="Crown (50pts)"
+                android:layout_marginStart="20dp" />
         </LinearLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <ImageView
-            android:id="@+id/homeBtn"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+        <!-- Footer Container -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/footerContainer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="25dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/homeicon" />
+            app:layout_constraintStart_toStartOf="parent">
+
+            <ImageView
+                android:id="@+id/homeBtn"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/homeicon" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
