--- a/app/src/main/res/layout/activity_challenges.xml
+++ b/app/src/main/res/layout/activity_challenges.xml
@@ -7,6 +7,22 @@
     android:background="#065938"
     tools:context=".Challenges">
 
+    <TextView
+        android:id="@+id/allDoneText"
+        android:layout_width="380dp"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/fredokaregular"
+        android:padding="20dp"
+        android:text="Hooray, you completed today's challenges! Every step you take in saving resources and keeping the environment clean helps protect endangered species."
+        android:textAlignment="center"
+        android:textColor="#D2F0DA"
+        android:textSize="20sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="380dp"
@@ -25,7 +41,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/challenge1"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="200dp"
                 android:layout_marginBottom="15dp"
                 android:background="@drawable/light_green_bg"
                 android:foregroundGravity="center"
@@ -58,7 +74,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="20dp"
                         android:fontFamily="@font/fredokaregular"
-                        android:text="Protect habitats and stop pollution that harms endangered species like sea turtles."
+                        android:text="By cleaning the beach, you're protecting habitats and stopping pollution that harms endangered species like sea turtles."
                         android:textSize="16sp"
                         tools:textAlignment="center" />
 
@@ -78,7 +94,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/challenge2"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="200dp"
                 android:layout_marginBottom="15dp"
                 android:background="@drawable/light_green_bg"
                 android:foregroundGravity="center"
@@ -97,7 +113,7 @@
                     tools:gravity="center">
 
                     <TextView
-                        android:id="@+id/textView2"
+                        android:id="@+id/textView3"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/fredokemedium"
@@ -106,7 +122,7 @@
                         tools:textAlignment="center" />
 
                     <TextView
-                        android:id="@+id/textView3"
+                        android:id="@+id/textView4"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="20dp"
@@ -131,7 +147,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/challenge3"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="200dp"
                 android:layout_marginBottom="15dp"
                 android:background="@drawable/light_green_bg"
                 android:foregroundGravity="center"
@@ -150,7 +166,7 @@
                     tools:gravity="center">
 
                     <TextView
-                        android:id="@+id/textView2"
+                        android:id="@+id/textView5"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/fredokemedium"
@@ -159,7 +175,7 @@
                         tools:textAlignment="center" />
 
                     <TextView
-                        android:id="@+id/textView3"
+                        android:id="@+id/textView6"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="20dp"
@@ -184,7 +200,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/challenge4"
                 android:layout_width="360dp"
-                android:layout_height="wrap_content"
+                android:layout_height="200dp"
                 android:background="@drawable/light_green_bg"
                 android:foregroundGravity="center"
                 tools:foregroundGravity="center">
@@ -202,7 +218,7 @@
                     tools:gravity="center">
 
                     <TextView
-                        android:id="@+id/textView2"
+                        android:id="@+id/textView7"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/fredokemedium"
@@ -211,7 +227,7 @@
                         tools:textAlignment="center" />
 
                     <TextView
-                        android:id="@+id/textView3"
+                        android:id="@+id/textView8"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="20dp"
