--- a/app/src/main/res/layout/activity_adoption.xml
+++ b/app/src/main/res/layout/activity_adoption.xml
@@ -76,6 +76,7 @@
                     android:backgroundTint="#62C578"
                     android:fontFamily="@font/fredokemedium"
                     android:text="African Elephant"
+                    android:textAlignment="center"
                     android:textSize="16sp" />
 
                 <Button
@@ -87,6 +88,7 @@
                     android:backgroundTint="#62C578"
                     android:fontFamily="@font/fredokemedium"
                     android:text="Hawksbill Sea Turtle"
+                    android:textAlignment="center"
                     android:textSize="16sp" />
             </LinearLayout>
 
@@ -132,45 +134,45 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:foregroundGravity="center">
 
-        <LinearLayout
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/nameInput"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
             android:foregroundGravity="center"
-            android:orientation="vertical"
-            android:padding="20dp"
+            android:gravity="center"
+            android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/animalName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/fredokemedium"
+                android:hint="Name Your Pet!"
+                android:textAlignment="center"
+                tools:textAlignment="center" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <Button
+            android:id="@+id/habitatBtn"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="102dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="96dp"
+            android:layout_marginBottom="20dp"
+            android:backgroundTint="#62C578"
+            android:fontFamily="@font/fredokemedium"
+            android:text="Submit"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:gravity="center">
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/nameInput"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:foregroundGravity="center"
-                android:gravity="center"
-                android:textAlignment="center">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/animalName"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/fredokemedium"
-                    android:hint="Name Your Pet!"
-                    android:textAlignment="center"
-                    tools:textAlignment="center" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <Button
-                android:id="@+id/submitBtn4"
-                android:layout_width="160dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:backgroundTint="#62C578"
-                android:fontFamily="@font/fredokemedium"
-                android:text="Submit" />
-        </LinearLayout>
+            app:layout_constraintTop_toBottomOf="@+id/nameInput" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
