--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,8 @@
 
         <Button
             android:id="@+id/startBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="180dp"
+            android:layout_height="60dp"
             android:layout_marginBottom="60dp"
             android:backgroundTint="#065938"
             android:fontFamily="@font/fredokemedium"
