--- a/app/src/main/res/layout/dialog_box.xml
+++ b/app/src/main/res/layout/dialog_box.xml
@@ -4,6 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     app:cardElevation="20dp"
+    app:cardBackgroundColor="#D3F1DB"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -23,6 +24,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/Text2"
+            android:fontFamily="@font/fredokemedium"
             />
 
         <TextView
@@ -38,6 +40,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/Text"
             app:layout_constraintBottom_toTopOf="@id/button"
+            android:fontFamily="@font/fredokemedium"
             />
 
         <com.google.android.material.button.MaterialButton
@@ -55,6 +58,7 @@
             app:strokeColor="#004721"
             app:strokeWidth="2dp"
             android:backgroundTint="#50C878"
+            android:fontFamily="@font/fredokaregular"
             />
 
 
